# desk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  OPTIMIZATION_IMPROVEMENTS.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_VERIFICATION.md  PHASE1_INTEGRATION_CHECKLIST.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  PHASE5_COMPLETE.md  PHASE5_PLAN.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  build.sh  dev.sh  index.html  package-lock.json  package.json  test.sh  vite.config.ts  完整测试指南.md  完整项目总结.md  当前状态.md  快速测试-3步开始.md  快速测试指南.md  最终完成报告.md  立即测试指南.md  类型修复总结.md  终极完成报告.md  运行前检查.md  集成完成总结.md  (+1 more)
plugins/example-plugin/: README.md  index.ts  package.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/commands/: plugin_commands.rs
src-tauri/src/desk_client/: mod.rs
src-tauri/src/openclaw/: mod.rs
src/commands/: executor.ts  history.ts  index.ts  registry.ts  shortcuts.ts  types.ts
src/components/: ErrorBoundary.tsx
src/config/: defaults.ts  index.ts  manager.ts  schema.ts  templates.ts  types.ts
src/hooks/: useCommandSystem.ts  useConfig.ts  useDesk.ts  useOpenClaw.ts  useTerminalInput.ts
src/plugin-sdk/: define-plugin.ts  index.ts  logger.ts  plugin-api.ts  types.ts
src/services/: config-manager.ts  desk-api.ts  event-bus.ts  openclaw-api.ts  plugin-loader.ts  plugin-registry.ts
src/store/: index.ts  rootStore.ts
(+57 files in other folders)
