[package]
name = "desk"
version = "0.1.0"
description = "AI-powered desktop environment"
authors = ["Desk Team"]
license = "MIT"
repository = "https://github.com/ivenye/desk"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["shell-open"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }

[features]
custom-protocol = ["tauri/custom-protocol"]
